--- a/app/views/modalities/new.html.haml
+++ b/app/views/modalities/new.html.haml
@@ -10,7 +10,7 @@
 
 .row
   %ul.no-bullet
-    = form_for @modality, as: :modality, url: patient_patient_modalities_path(@patient) do |m|
+    = form_for @modality, as: :modality, url: patient_modalities_path(@patient) do |m|
 
       .modality-form
 
@@ -43,7 +43,7 @@
 
         %li
           = m.label :date, "Start Date"
-          = m.date_select(:date, {start_year: (120.years.ago).year, end_year: Time.now.year, order: [:day, :month, :year]}, class: "datetime")
+          = m.date_select(:start_date, {start_year: (120.years.ago).year, end_year: Time.now.year, order: [:day, :month, :year]}, class: "datetime")
 
         %li
           = m.label :notes, "Notes"
