--- a/app/views/modalities/index.html.haml
+++ b/app/views/modalities/index.html.haml
@@ -15,6 +15,8 @@
       %th
         Modality Reason
       %th
+        Start Date
+      %th
         Termination Date
 
     - @modalities.each do |modality|
@@ -24,7 +26,9 @@
         %td
           = modality.modality_reason.description
         %td
-          = modality.deleted_at
+          = modality.start_date
+        %td
+          = modality.termination_date
 
 
   = link_to 'Set New Modality', new_patient_modality_path(@patient),
