--- a/app/views/patients/_medication_fields.html.haml
+++ b/app/views/patients/_medication_fields.html.haml
@@ -14,9 +14,9 @@
   - else 
     
     .medication-type-field
-      = pm.label :medication_type, "Medication Type"
-      = pm.select :medication_type, drug_select_options(pm.object.medication_type), { :prompt => "Select drug by category/type or use the search option below", include_blank: true }, { :class => "medication-type-select" } 
-    
+      = label_tag :medication_switch, "Medication Type"
+      = select_tag :medication_switch, drug_select_options, { :prompt => "Select drug by category/type or use the search option below", include_blank: true, :class => "medication-type-select" }
+
     / Search all drugs
     .standard
       = label_tag :drug_search, "Drug"
@@ -29,9 +29,8 @@
 
     / Show only when selecting drugs by category/type.
     .drug-by-select
-      = pm.label :drug_select, "Select Drug"
-      = pm.collection_select :drug_select, drugs_for(pm.object.medication_type), :id, :name, {}, :class => "drug-select"
-
+      = label_tag :drug_select, "Select Drug"
+      = select_tag :drug_select, @selected_drugs, :class => "drug-select"
 
   / Same for both
   = pm.label :dose
