Removed 'user_id' fields from views.

--- a/app/views/patients/clinical_summary.html.haml
+++ b/app/views/patients/clinical_summary.html.haml
@@ -18,7 +18,7 @@
       - @patient.patient_problems.each do |p|
    
         %li
-          = "#{p.description}, #{p.created_at.strftime("%d/%m/%Y")}, #{p.user_id}"
+          = "#{p.description}, #{p.created_at.strftime("%d/%m/%Y")}
                     
 .wide-screen
   .columns.large-6
@@ -43,7 +43,7 @@
           %dl.accordion{data: {accordion: true} }
             %dd.accordion-navigation
               %a.fi-plus.fi-minus.toggle-notes{:id => "patient-event-toggle-notes-#{event.id}", href: "#patient-event-notes-#{event.id}"}           
-                = "#{event.date_time.strftime("%d/%m/%Y")}, #{event.patient_event_type.name} - #{event.description}, #{event.user_id}"
+                = "#{event.date_time.strftime("%d/%m/%Y")}, #{event.patient_event_type.name} - #{event.description}
                  
               .patient-event.content{:id => "patient-event-notes-#{event.id}"}
                 = event.notes
