Redirected updates for date of death and causes of death.

--- a/app/views/modalities/index.html.haml
+++ b/app/views/modalities/index.html.haml
@@ -13,7 +13,7 @@
       %th
         Modality Code
       %th
-        Modality Reason
+        Notes
       %th
         Start Date
       %th
@@ -24,7 +24,7 @@
         %td
           = modality.modality_code.name
         %td
-          = modality.modality_reason.description
+          = modality.notes
         %td
           = modality.start_date
         %td
