--- a/app/views/modalities/index.html.haml
+++ b/app/views/modalities/index.html.haml
@@ -34,3 +34,8 @@
   = link_to 'Set New Modality', new_patient_modality_path(@patient),
       title: 'Set Patient Modality',
       class: 'button tiny left cancel mt'
+
+.wide-screen
+  = content_for :secondary_nav do
+    = render partial: "patients/clin_sum_sub_nav", locals: { model: @patient }
+
