--- a/app/views/modalities/new.html.haml
+++ b/app/views/modalities/new.html.haml
@@ -22,21 +22,21 @@
           = m.label :modality_code_id, "Modality"
           = m.collection_select :modality_code_id, ModalityCode.all, :id, :name, {}, :id => "modality-code-select"
 
-        %li
+        %li.hide-death
           = m.label :modal_change_type, "Type of Change"
           = m.select :modal_change_type, modal_change_options(m.object.modal_change_type), {}, :class => "modal-change-type"
-        %li
+        %li.hide-death
           = m.label :modality_reason_id, "Reason for Change"
           = m.collection_select :modality_reason_id, modal_reasons_for(m.object.modal_change_type), :id, :description, {}, :class => "modality-reason-select"
 
-        %li
+        %li.hide-death
           = link_to "Renal Registry Reason for Change Codes", "#", id: "modal-reason-code", class: "button tiny mt"
 
         %li
           = m.label :date, "Start Date"
           = m.date_select(:start_date, {start_year: (120.years.ago).year, end_year: Time.now.year, order: [:day, :month, :year]}, class: "datetime")
 
-        %li
+        %li.hide-death
           = m.label :notes, "Notes"
           = m.text_area(:notes, :cols => 10, :rows => 2)
 
