Adjusted how death details are entered/displayed.

--- a/app/assets/stylesheets/foundation/toggle.css.scss
+++ b/app/assets/stylesheets/foundation/toggle.css.scss
@@ -52,6 +52,11 @@
   background: none;
   border-radius: 0.5em;
   padding: 0 0.3em 0 0.3em;
+  font-size: 0.8em;
+}
+
+.toggle-text {
+  font-size: 0.8em;
 }
 
 .accordion .accordion-navigation > .content.active, .accordion dd  > .content.toggle-content {
