--- a/app/views/patients/death.html.haml
+++ b/app/views/patients/death.html.haml
@@ -4,8 +4,57 @@
   %h5 Deceased Patients
 
 .row
-  %ul.no-bullet
-    - @dead_patients.each do |patient| 
-    
-      %li
-        = patient.full_name
+  %table.responsive
+    %caption All Patients
+    %thead
+      %tr
+        %th
+          Name
+        %th
+          NHS No.
+        %th
+          KCH No.
+        %th
+          Sex
+        %th
+          Date of Birth
+        %th
+          Date of Death
+        %th
+          Age
+        %th.g-center{colspan: "4"}
+          Actions
+       
+    %tbody
+      %tr      
+        - @dead_patients.each do |patient| 
+          %td{ :data => { :heading => "Forename"}}
+            = link_to " " + patient.full_name, clinical_summary_patient_path(patient), :title => "Clinical Summary"
+          %td{ :data => { :heading => "NHS No."}}
+            = patient.nhs_number
+          %td{ :data => { :heading => "Hospital No."}}
+            = patient.local_patient_id
+          %td{ :data => { :heading => "Sex"}}
+            = I18n.t("enums.gender.#{patient.sex}")
+          %td{ :data => { :heading => "DoB"}}
+            = patient.dob.strftime("%d/%m/%Y")
+          %td{ :data => { :heading => "DoD"}}
+            = patient.death_date.strftime("%d/%m/%Y")
+          %td{ :data => { :heading => "Age"}}
+            = patient.age
+          %td.g-center{ :data => { :heading => "Causes of Death"}, valign: "top" } 
+            %dl.accordion{ data: { accordion: true } }
+              %dd.accordion-navigation
+                %a.fi-plus.fi-minus.toggle-notes{ :id => "patient-death-cause-#{patient.id}", href: "#patient-death-cause-#{patient.id}" }
+                  Causes of death
+                .content.toggle-content{ :id => "patient-death-cause-#{patient.id}" }
+                  %ul.no-bullet
+                    %li.toggle-text
+                      = patient.first_edta_code.death_cause
+                    %li.toggle-text
+                      = patient.second_edta_code.death_cause
+          %td.g-center{:data => { :heading => "Edit death details"}}
+            = link_to "Edit death details", death_update_patient_path(patient.id), :title => "Edit death details"          
+          %td.g-center{ :data => { :heading => "Admin"}}
+            = link_to "Demographics", demographics_patient_path(patient), :title => "Demographics"
+  
