--- a/app/views/patients/demographics.html.haml
+++ b/app/views/patients/demographics.html.haml
@@ -38,15 +38,15 @@
           %dd= I18n.t("enums.gender.#{@patient.sex}")
 
           %dt Ethnicity:
-          %dd= "#{@patient.ethnicity.name}"
+          %dd= @patient.ethnicity.name
 
       .large-3.columns
         %dl
           %dt Date of Birth:
-          %dd= "#{@patient.dob.strftime("%d/%m/%Y")}"
+          %dd= @patient.dob.strftime("%d/%m/%Y")
 
           %dt Date of Death:
-          %dd= "#{@patient.death_date.blank? ? "N/A" : @patient.death_date.strftime("%d/%m/%Y")}"
+          %dd= @patient.death_date.blank? ? "N/A" : @patient.death_date.strftime("%d/%m/%Y")
 
           - if @patient.death_date.present? && @patient.first_edta_code_id.blank?
             .alert_text
