Move patient search to Ransack

--- a/app/views/patients/index.html.haml
+++ b/app/views/patients/index.html.haml
@@ -2,7 +2,7 @@
   %h5 Renal Patients
 
 .row
-  %table.responsive
+  %table.patients.responsive
     %caption All Patients
     %thead
       %tr
@@ -20,8 +20,8 @@
           Age
         %th.g-center{colspan: "2"}
           Actions
-       
-          
+
+
 
     %tbody
       = render @patients
