--- a/app/views/shared/_main_navigation.html.haml
+++ b/app/views/shared/_main_navigation.html.haml
@@ -21,14 +21,15 @@
 
     %ul.left
       %li.has-form
-        = form_tag search_patients_path, :method => "get" do
+        = search_form_for @patient_search do |f|
           .row.collapse
             .large-8.small-9.columns
-              = label_tag :patient_search, "Patient Search" do
-                = search_field_tag :patient_search, params[:patient_search], 
-                :placeholder => "Patient Name, Local Patient ID or NHS No."
+              = label_tag :forename_or_surname_or_local_patient_id_or_nhs_number_cont, "Patient Search" do
+                = f.search_field :forename_or_surname_or_local_patient_id_or_nhs_number_cont,
+                  :id => 'patient_search_input',
+                  :placeholder => "Patient Name, Local Patient ID or NHS No."
             .large-4.small-3.columns
-              = submit_tag "Find!", :title => "Find Patient", :class => "nav-search button tiny"
+              = f.submit "Find!", :title => "Find Patient", :class => "nav-search button tiny"
 
     %ul.right.large-2.columns
       %li.has-dropdown
