--- a/app/assets/stylesheets/foundation/toggle.css.scss
+++ b/app/assets/stylesheets/foundation/toggle.css.scss
@@ -48,7 +48,7 @@
   display: none;
 }
 
-.accordion dd > a.toggle-notes {
+.accordion dd > a.toggle-info {
   background: none;
   border-radius: 0.5em;
   padding: 0 0.3em 0 0.3em;
