--- a/app/views/patients/_peritonitis_table.html.haml
+++ b/app/views/patients/_peritonitis_table.html.haml
@@ -13,14 +13,12 @@
     %th.table-width
       Episode Type
     %th.table-width
-      Notes
-    %th.table-width
       White Cell Count
     %th.table-width
       Antibiotics/Routes
     %th.table-width
       Last Updated
-    %th.table-width.g-center{colspan: "2"}
+    %th.table-width.g-center{colspan: "1"}
       Action
 
   %tbody
@@ -35,7 +33,7 @@
         %td{ :data => { :heading => "Organisms"}, valign: "top" }
           %dl.accordion{ data: { accordion: true } }
             %dd.accordion-navigation
-              %a.toggle-notes{ :id => "patient-peritonitis-toggle-#{p.id}", href: "#patient-peritonitis-toggle-#{p.id}" }
+              %a.toggle-info{ :id => "patient-peritonitis-toggle-#{p.id}", href: "#patient-peritonitis-toggle-#{p.id}" }
                 View
               .content{ :id => "patient-peritonitis-toggle-#{p.id}" }
                 %ul.no-bullet.toggle-content
@@ -53,7 +51,7 @@
         %td{ :data => { :heading => "Organisms"}, valign: "top" }
           %dl.accordion{ data: { accordion: true } }
             %dd.accordion-navigation
-              %a.toggle-notes{ :id => "patient-peritonitis-toggle-#{p.id}", href: "#patient-peritonitis-toggle-#{p.id}" }
+              %a.toggle-info{ :id => "patient-peritonitis-toggle-#{p.id}", href: "#patient-peritonitis-toggle-#{p.id}" }
                 View
               .content{ :id => "patient-peritonitis-toggle-#{p.id}" }
                 %ul.no-bullet.toggle-content
@@ -63,34 +61,39 @@
         %td{ :data => { :heading => "Episode Type"}, valign: "top" }
           %dl.accordion{ data: { accordion: true } }
             %dd.accordion-navigation
-              %a.toggle-notes{ :id => "patient-peritonitis-toggle-#{p.id}", href: "#patient-peritonitis-toggle-#{p.id}" }
-                = p.episode_type.term
+              %a.toggle-info{ :id => "patient-peritonitis-toggle-#{p.id}", href: "#patient-peritonitis-toggle-#{p.id}" }
+                = p.episode_type.blank? ? "Unknown": p.episode_type.term
               .content.toggle-content{ :id => "patient-peritonitis-toggle-#{p.id}" }
                 = "Catheter Removed: #{p.catheter_removed}"
 
-        %td{:data => { :heading => "Description" }, valign: "top"}
-          %dl.accordion{ data: { accordion: true } }
-            %dd.accordion-navigation
-              %a.toggle-notes{ :id => "patient-peritonitis-toggle-#{p.id}", href: "#patient-peritonitis-toggle-#{p.id}" }
-                View
-              .content.toggle-content{ :id => "patient-peritonitis-toggle-#{p.id}" }
-                = p.notes
+        / %td{:data => { :heading => "Description" }, valign: "top"}
+        /   %dl.accordion{ data: { accordion: true } }
+        /     %dd.accordion-navigation
+        /       %a.toggle-info{ :id => "patient-peritonitis-toggle-#{p.id}", href: "#patient-peritonitis-toggle-#{p.id}" }
+        /         View
+        /       .content.toggle-content{ :id => "patient-peritonitis-toggle-#{p.id}" }
+        /         = p.notes
 
         %td{ :data => { :heading => "White Cell Count"}, valign: "top" }
           %dl.accordion{ data: { accordion: true } }
             %dd.accordion-navigation
-              %a.toggle-notes{ :id => "patient-peritonitis-toggle-#{p.id}", href: "#patient-peritonitis-toggle-#{p.id}" }
+              %a.toggle-info{ :id => "patient-peritonitis-toggle-#{p.id}", href: "#patient-peritonitis-toggle-#{p.id}" }
                 = "Total: #{p.white_cell_total}"
               .content.toggle-content{ :id => "patient-peritonitis-toggle-#{p.id}" }
-                = "Neutro: #{p.white_cell_neutro}%,"
-                = "Lympho: #{p.white_cell_lympho}%,"
-                = "Degen: #{p.white_cell_degen}%,"
-                = "Other: #{p.white_cell_other}%"
+                %ul.no-bullet.toggle-content
+                  %li
+                    = "Neutro: #{p.white_cell_neutro}%,"
+                  %li
+                    = "Lympho: #{p.white_cell_lympho}%,"
+                  %li
+                    = "Degen: #{p.white_cell_degen}%,"
+                  %li
+                    = "Other: #{p.white_cell_other}%"
 
         %td{ :data => { :heading => "Antibiotics/ Routes"}, valign: "top" }
           %dl.accordion{ data: { accordion: true } }
             %dd.accordion-navigation
-              %a.toggle-notes{ :id => "patient-peritonitis-toggle-#{p.id}", href: "#patient-peritonitis-toggle-#{p.id}" }
+              %a.toggle-info{ :id => "patient-peritonitis-toggle-#{p.id}", href: "#patient-peritonitis-toggle-#{p.id}" }
                 View
               .content.toggle-content{ :id => "patient-peritonitis-toggle-#{p.id}" }
                 %ul.no-bullet
@@ -102,10 +105,3 @@
 
         %td{ :data => { :heading => "Action" }, valign: "top" }
           = link_to "Update", edit_patient_peritonitis_episode_path(@patient, p.id)
-        %td{ :data => { :heading => "Action"}, valign: "top" }
-          %dl.accordion{ data: { accordion: true } }
-            %dd.accordion-navigation
-              %a.toggle-notes{ :id => "patient-peritonitis-toggle-#{p.id}", href: "#patient-peritonitis-toggle-#{p.id}" }
-                View more info
-              .content.toggle-content{ :id => "patient-peritonitis-toggle-#{p.id}" }
-
