--- a/app/views/patients/clinical_summary.html.haml
+++ b/app/views/patients/clinical_summary.html.haml
@@ -11,15 +11,15 @@
 
 .wide-screen
   .columns.large-6
-    %h5.g-center 
+    %h5.g-center
       = link_to "#{@patient.patient_problems.length} Problems", problems_patient_path(@patient)
 
     %ul.no-bullet
       - @patient.patient_problems.each do |p|
-   
+
         %li
           = "#{p.description}, #{p.created_at.strftime("%d/%m/%Y")}"
-                    
+
 .wide-screen
   .columns.large-6
     %h5.g-center
@@ -27,28 +27,28 @@
 
     %ul.no-bullet
       - @patient.medications.each do |p|
-       
+
         %li{:class => "drug-#{drug_types_colour_tag(p.medicatable.drug_types)}"}
-          
-          = "#{drug_types_tag(p.medicatable.drug_types)}: #{p.medicatable.name}, #{p.dose}, #{p.medication_route.name}, #{p.frequency}, #{p.date.strftime("%d/%m/%Y")}"          
+
+          = "#{drug_types_tag(p.medicatable.drug_types)}: #{p.medicatable.name}, #{p.dose}, #{p.medication_route.name}, #{p.frequency}, #{p.date.strftime("%d/%m/%Y")}"
 
 .wide-screen
   .columns.large-12
     %h5.g-center
       = link_to "#{@patient.patient_events.length} Patient Events", patient_patient_events_path(@patient)
 
-    %ul.no-bullet 
+    %ul.no-bullet
       - @patient.patient_events.each do |event|
         %li
           %dl.accordion{data: {accordion: true} }
             %dd.accordion-navigation
-              %a.fi-plus.fi-minus.toggle-notes{:id => "patient-event-toggle-notes-#{event.id}", href: "#patient-event-notes-#{event.id}"}           
+              %a.fi-plus.fi-minus.toggle-info{:id => "patient-event-toggle-info-#{event.id}", href: "#patient-event-notes-#{event.id}"}
                 = "#{event.date_time.strftime("%d/%m/%Y")}, #{event.patient_event_type.name} - #{event.description}"
-                 
+
               .patient-event.content{:id => "patient-event-notes-#{event.id}"}
                 = event.notes
-          
+
 .wide-screen
-  = content_for :secondary_nav do  
+  = content_for :secondary_nav do
     = render partial: "patients/clin_sum_sub_nav", locals: { model: @patient }
 
