--- a/app/views/patients/problems.html.haml
+++ b/app/views/patients/problems.html.haml
@@ -5,32 +5,32 @@
   .row
     = render partial: "patients/mini_renal_profile", locals: { model: @patient }
 
-.row  
+.row
   %h5.g-center
     = link_to "Patient Problems", problems_patient_path(@patient)
 
 .wide-screen
-  = form_for @patient do |f|  
+  = form_for @patient do |f|
     = hidden_field_tag :redirect_url, problems_patient_path(@patient)
-    
-    = f.fields_for :patient_problems do |pb|  
+
+    = f.fields_for :patient_problems do |pb|
       - if pb.object.versions != []
-       
+
         %dl.accordion.right.columns.large-6{ class: "problem-history", data: {accordion: true} }
-          %dd.accordion-navigation   
-            %a.fi-plus.fi-minus.toggle-notes{ class: "problem-history-link", href: "#history-list-#{pb.object.id}" }  
-              View history of active problem 
-            
+          %dd.accordion-navigation
+            %a.fi-plus.fi-minus.toggle-info{ class: "problem-history-link", href: "#history-list-#{pb.object.id}" }
+              View history of active problem
+
             .content{ id: "history-list-#{pb.object.id}" }
               - pb.object.versions.map(&:reify).reverse.each do |p|
-              
+
                 %ul.no-bullet
                   %li.history
                     = "#{p.description}, #{p.updated_at.strftime("%d/%m/%Y - %H:%M")}"
 
       - if pb.object.new_record?
 
-        #new-probs-form   
+        #new-probs-form
           %a.button.tiny.toggle.right.mt{href: '#new-probs-form'}
             Add a new problem
 
@@ -47,35 +47,35 @@
                 .problem-form{data: { index: @patient.patient_problems.length - 1 }}
 
                   = render :partial => 'problem_form', :locals => { :pb => pb }
-              
+
                 #additional-form
 
                 %a.button.tiny.left.mt.add-problem{href: '#'}
                   Add another problem
-    
+
         = link_to "Cancel", clinical_summary_patient_path(@patient), class: "button tiny left cancel mt"
-                   
+
       - else
-     
+
         %dl.accordion{data: {accordion: true} }
           %dd.accordion-navigation.med-form
-            %a.fi-plus.fi-minus.toggle-notes{ class: "problem", href: "#edit-probs-#{pb.object.id}" }              
+            %a.fi-plus.fi-minus.toggle-info{ class: "problem", href: "#edit-probs-#{pb.object.id}" }
               = "#{pb.object.description}, #{pb.object.created_at.strftime("%d/%m/%Y")}"
               .right.edit
                 Edit
 
-          
-            .columns.large-6.probs-form.content{:id => "edit-probs-#{pb.object.id}", data: { index: 0 }}         
+
+            .columns.large-6.probs-form.content{:id => "edit-probs-#{pb.object.id}", data: { index: 0 }}
               = render :partial => 'problem_form', :locals => { :pb => pb }
-            
-              .probs-form.content{:id => "edit-probs-#{pb.object.id}"}  
+
+              .probs-form.content{:id => "edit-probs-#{pb.object.id}"}
                 = pb.check_box :_destroy
                 = pb.label :_destroy, "Terminate?", class: "delete"
 
     = f.submit "Save Problems", :class => "button tiny right save mt"
 
 .wide-screen
-  = content_for :secondary_nav do  
+  = content_for :secondary_nav do
     = render partial: "patients/clin_sum_sub_nav", locals: { model: @patient }
 
 
