--- a/app/views/patients/_peritonitis_table.html.haml
+++ b/app/views/patients/_peritonitis_table.html.haml
@@ -79,7 +79,7 @@
             %dd.accordion-navigation
               %a.toggle-info{ :id => "patient-peritonitis-toggle-#{p.id}", href: "#patient-peritonitis-toggle-#{p.id}" }
                 = "Total: #{p.white_cell_total}"
-              .content.toggle-content{ :id => "patient-peritonitis-toggle-#{p.id}" }
+              .content{ :id => "patient-peritonitis-toggle-#{p.id}" }
                 %ul.no-bullet.toggle-content
                   %li
                     = "Neutro: #{p.white_cell_neutro}%,"
